--- a/OláMundo.ipynb
+++ b/OláMundo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsCdXFESOCwjPgEoGky/IY",
+      "authorship_tag": "ABX9TyNtqfYFRzjHzofuvwEGsigw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,19 +34,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2054e61d-4f4a-4c71-ee65-5a3d80403a1a"
+        "outputId": "6318d91b-afca-4020-fb88-ca073da0da61"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Olá Mundo\n"
+            "Olá mundo\n",
+            "Hello world\n"
           ]
         }
       ],
       "source": [
-        "print(\"Olá Mundo\")"
+        "print(\"Olá mundo\");\n",
+        "print(\"Hello world\");"
       ]
     }
   ]
