--- a/Aula_Inicial_de_Programação.ipynb
+++ b/Aula_Inicial_de_Programação.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQsSMwIc4OyRa7NGHGCOnB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -346,7 +345,7 @@
         },
         "outputId": "3c7b887e-65ff-458c-8dc0-2277704717b7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +386,7 @@
         "id": "e4H9KeevUQYR",
         "outputId": "f950ce2e-7490-41a8-fb67-211397bd07bd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +420,7 @@
         "id": "cYjF9e77Wtz5",
         "outputId": "5f900665-1271-4d35-92c5-fcb55b03b405"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +449,7 @@
         "id": "TdNNt5fWYNq5",
         "outputId": "825c61dc-653e-4905-f894-60d8ab311b5b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +490,7 @@
         "id": "y1MoL50GZBKR",
         "outputId": "39d34f78-262c-473d-813e-4839c914e504"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +522,7 @@
         "id": "Sa_mxcbjeGX6",
         "outputId": "5a0462eb-3830-44a0-fa5d-72404fadb9f7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +558,7 @@
         "id": "Vrm_v0pDezPA",
         "outputId": "52fc19ae-4413-4d20-d7e6-c848487868ea"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +597,7 @@
         "id": "_8gTIW0HhkRD",
         "outputId": "d56ff6e5-c665-4b09-cde0-a3986bbc872a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +633,7 @@
         "id": "Ry0Y1q4OlB1g",
         "outputId": "b745c866-1451-483a-ffb4-2d4d4305a943"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +685,7 @@
         "id": "RgdaDTForqFA",
         "outputId": "2cfa9519-ff37-46c2-a775-b57615afab0f"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +747,7 @@
         "id": "7sVWcog8vKL9",
         "outputId": "f7bea556-51cd-4f0e-bba6-c7ebc55fb1a3"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +795,7 @@
         "id": "uUGh3CHbs1PF",
         "outputId": "7ff389b9-f65d-4f44-f812-b054a4637f36"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,7 +834,7 @@
         "id": "hOHOuK3qvLL1",
         "outputId": "f8f14e86-fb56-4540-a4ba-944821a65946"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,7 +878,7 @@
         "id": "-TSc14P-xTA1",
         "outputId": "8d55a9da-c311-4475-bf64-eca18f106352"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,7 +916,7 @@
         "print(\"Crescente =\", sorted(a))\n",
         "dec = sorted(a, reverse=True) #Transforma a lista em decrescente\n",
         "print(\"Decrescente =\", dec)\n",
-        "print(\"Os 4 primeiros elemento da lista:\", a[: 5])\n",
+        "print(\"Os 4 primeiros elemento da lista:\", a[: 4])\n",
         "print(\"os últimos 2 elementos da lista:\", a[-2:])\n",
         "print(\"todos os elementos com exceção do primeiro e do último:\", a[1:-1])\n",
         "print(\"o primeiro a cada dois elementos de toda a lista:\", a[::2])\n",
@@ -929,9 +928,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wbdn5SnJ8JXu",
-        "outputId": "9346f569-02d4-4e2a-9ebe-242b9ed7623b"
+        "outputId": "6c76bc11-b921-4a79-e508-a1014b63d7b4"
       },
-      "execution_count": 112,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -941,7 +940,7 @@
             "Tamanho = 10\n",
             "Crescente = [5, 9, 17, 21, 33, 42, 50, 64, 76, 89]\n",
             "Decrescente = [89, 76, 64, 50, 42, 33, 21, 17, 9, 5]\n",
-            "Os 4 primeiros elemento da lista: [42, 17, 89, 5, 64]\n",
+            "Os 4 primeiros elemento da lista: [42, 17, 89, 5]\n",
             "os últimos 2 elementos da lista: [21, 50]\n",
             "todos os elementos com exceção do primeiro e do último: [17, 89, 5, 64, 33, 9, 76, 21]\n",
             "o primeiro a cada dois elementos de toda a lista: [42, 89, 64, 9, 21]\n",
