--- a/Lista-1-Python.ipynb
+++ b/Lista-1-Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFCqQKHMRPuLjm13vX2s1V",
+      "authorship_tag": "ABX9TyNp+TYGsRGrGJ56nUZvrkUB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "execution_count": 14,
       "metadata": {
         "id": "2Bk4jl2mEym6",
-        "outputId": "50a96aa1-172c-4faf-d681-4886fbbd7bc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "50a96aa1-172c-4faf-d681-4886fbbd7bc6"
       },
       "outputs": [
         {
@@ -78,11 +78,11 @@
         ""
       ],
       "metadata": {
-        "id": "vIodWIxx42JT",
-        "outputId": "6455eca5-99a0-4b60-c021-17a2c8ea9a05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vIodWIxx42JT",
+        "outputId": "6455eca5-99a0-4b60-c021-17a2c8ea9a05"
       },
       "execution_count": 46,
       "outputs": [
@@ -121,11 +121,11 @@
         "  print(\"Numeros iguais\")\n"
       ],
       "metadata": {
-        "id": "x75Qxu6gBJmI",
-        "outputId": "421b08a2-bd63-425f-8f65-b46b9952e965",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x75Qxu6gBJmI",
+        "outputId": "421b08a2-bd63-425f-8f65-b46b9952e965"
       },
       "execution_count": 60,
       "outputs": [
@@ -152,31 +152,67 @@
         " #O número de questões pode ser variável (obtenha a informação do usuário)\n",
         " #Deve permitir verificar os acertos de mais de um aluno.\n",
         "\n",
-        "numQestoes = int(input(\"informe o numero de questões\"))\n",
-        "gabarito = str(input(\"Informe as respostas e do gabarito estilo “A-B-C-A-B-C-E-D\"))\n",
+        "def calcular_acertos(gabarito, respostas_aluno):\n",
+        "    acertos = 0\n",
+        "    for i in range(len(gabarito)):\n",
+        "        if gabarito[i] == respostas_aluno[i]:\n",
+        "            acertos += 1\n",
+        "    return acertos\n",
         "\n",
-        "if\n",
+        "def main():\n",
+        "    gabarito = input(\"Informe o gabarito das questões (ex: A-B-C-A-B-C-E-D): \").upper().split(\"-\")\n",
+        "    num_questoes = len(gabarito)\n",
+        "\n",
+        "    while True:\n",
+        "        respostas_aluno = input(\"Informe as respostas do aluno (ou 'sair' para encerrar): \")\n",
+        "\n",
+        "        if respostas_aluno.lower() == \"sair\":\n",
+        "            break\n",
+        "\n",
+        "        respostas_aluno = respostas_aluno.upper().split(\"-\")\n",
+        "\n",
+        "        if len(respostas_aluno) != num_questoes:\n",
+        "            print(\"Número de respostas do aluno não coincide com o gabarito.\")\n",
+        "            continue\n",
+        "\n",
+        "        acertos = calcular_acertos(gabarito, respostas_aluno)\n",
+        "        print(\"O aluno acertou\", acertos, \" questões.\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n",
+        "\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "KskBu5YxEsi6",
-        "outputId": "d24b033a-3a87-46c3-f334-3e7be8b81568",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KskBu5YxEsi6",
+        "outputId": "41d80417-c1fa-488b-f1f6-70b527572746"
       },
-      "execution_count": 59,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "informe as respostas de sua prova, As respostas devem ser somente A até E - abcde\n",
-            "abcde\n"
+            "Informe o gabarito das questões (ex: A-B-C-A-B-C-E-D): A-B-C-D-E\n",
+            "Informe as respostas do aluno (ou 'sair' para encerrar): A-B-D-E-C\n",
+            "O aluno acertou 2  questões.\n",
+            "Informe as respostas do aluno (ou 'sair' para encerrar): SAIR\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XU8UDWQp0ABt"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
