--- a/Lista-1-Python.ipynb
+++ b/Lista-1-Python.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNp+TYGsRGrGJ56nUZvrkUB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "2Bk4jl2mEym6",
         "colab": {
@@ -74,8 +73,7 @@
         "if (a % 2) <= 0:\n",
         "  print(\"É par\")\n",
         "else:\n",
-        "  print(\"É Impar\")\n",
-        ""
+        "  print(\"É Impar\")\n"
       ],
       "metadata": {
         "colab": {
@@ -84,7 +82,7 @@
         "id": "vIodWIxx42JT",
         "outputId": "6455eca5-99a0-4b60-c021-17a2c8ea9a05"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +125,7 @@
         "id": "x75Qxu6gBJmI",
         "outputId": "421b08a2-bd63-425f-8f65-b46b9952e965"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +189,7 @@
         "id": "KskBu5YxEsi6",
         "outputId": "41d80417-c1fa-488b-f1f6-70b527572746"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -207,9 +205,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Atividade 5"
+      ],
       "metadata": {
         "id": "XU8UDWQp0ABt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ID3kjro32l1Z"
       },
       "execution_count": null,
       "outputs": []
