--- a/Lista-1-Python.ipynb
+++ b/Lista-1-Python.ipynb
@@ -206,19 +206,74 @@
     {
       "cell_type": "code",
       "source": [
-        "#Atividade 5"
+        "#Atividade 5\n",
+        "#Escreva um programa que faz o registro da venda de produtos. Para isso, é preciso:\n",
+        " #● Armazenar as informações dos produtos, contendo: Código, nome e valor.\n",
+        " #Defina de forma fixa o conjunto de produtos.\n",
+        " #● Adicionar produtos na venda, onde o usuário informa o produto e a\n",
+        " #quantidade. A informação do produto pode ser pelo código.\n",
+        " #● O programa deve apresentar os itens da venda contendo as informações do\n",
+        " #item (código, nome e valor), quantidade e valor total do produto.\n",
+        " #● O programa deve apresentar o valor total da venda\n",
+        "\n",
+        "class RegistroVendas:\n",
+        "    def __init__(self, codigo, nome, valor):\n",
+        "        self.codigo = int(codigo)\n",
+        "        self.nome = str(nome)\n",
+        "        self.valor = float(valor)\n",
+        "\n",
+        "produtosOferecidos = {\n",
+        "    1: RegistroVendas(1, \"Chocolate Premium\", 25.00),\n",
+        "    2: RegistroVendas(2, \"Refrigerante\", 7.50),\n",
+        "    3: RegistroVendas(3, \"Picanha\", 100.00),\n",
+        "    4: RegistroVendas(4, \"Arroz mascado 5kg\", 13.25)\n",
+        "}\n",
+        "\n",
+        "carrinho = []\n",
+        "\n",
+        "while True:\n",
+        "    print(\"\\n Dentre as seguintes Opções, Escolha abaixo: \")\n",
+        "    print(\"1. Adicionar produto ao carrinho\")\n",
+        "    print(\"2. Mostrar carrinho\")\n",
+        "    print(\"3. Mostrar valor total da venda\")\n",
+        "    print(\"4. Sair\")\n",
+        "\n",
+        "    escolha = input(\"Escolha entre as opções de 1 a 4 acima: \")\n",
+        "\n",
+        "    if escolha == '1':\n",
+        "        codigoProduto = int(input(\"Informe o código do produto: \"))\n",
+        "\n",
+        "        if codigoProduto in produtosOferecidos:\n",
+        "            produto = produtosOferecidos[codigoProduto]\n",
+        "            quantidade = int(input(\"Informe a quantidade: \"))\n",
+        "            valorTotal = produto.valor * quantidade\n",
+        "            carrinho.append({\n",
+        "                \"produto\": produto,\n",
+        "                \"quantidade\": quantidade,\n",
+        "                \"valorTotal\": valorTotal\n",
+        "            })\n",
+        "            print(f\"{quantidade} {produto.nome}(s) Adicionados ao carrinho\")\n",
+        "        else:\n",
+        "            print(\"Código de produto inválido.\")\n",
+        "    elif escolha == '2':\n",
+        "        for item in carrinho:\n",
+        "            print(f\"Código: {item['produto'].codigo}\")\n",
+        "            print(f\"Nome: {item['produto'].nome}\")\n",
+        "            print(f\"Valor unitário: R${item['produto'].valor:.2f}\")\n",
+        "            print(f\"Quantidade: {item['quantidade']}\")\n",
+        "            print(f\"Valor total: R${item['valorTotal']:.2f}\")\n",
+        "            print(\"=\" * 20)\n",
+        "    elif escolha == '3':\n",
+        "        total = sum(item['valorTotal'] for item in carrinho)\n",
+        "        print(f\"Valor total da venda: R${total:.2f}\")\n",
+        "    elif escolha == '4':\n",
+        "        print(\"Saindo do programa.\")\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"Opção inválida.\")\n"
       ],
       "metadata": {
         "id": "XU8UDWQp0ABt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ID3kjro32l1Z"
       },
       "execution_count": null,
       "outputs": []
