--- a/Lista-1-Python.ipynb
+++ b/Lista-1-Python.ipynb
@@ -27,21 +27,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "2Bk4jl2mEym6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "50a96aa1-172c-4faf-d681-4886fbbd7bc6"
+        "outputId": "06a427ca-d1fa-4b92-d077-3436351a46ea"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite qualquer numero inteiro100\n",
-            "10.0\n"
+            "Digite qualquer numero inteiro: -1\n",
+            "Numero invalido\n"
           ]
         }
       ],
@@ -53,7 +53,7 @@
         "# Faça um programa que receba um número inteiro. Se esse número for positivo,\n",
         "#calcule a raiz quadrada do número. Senão, informe que o número é inválido.\n",
         "\n",
-        "a = int(input(\"Digite qualquer numero inteiro\" ))\n",
+        "a = int(input(\"Digite qualquer numero inteiro: \" ))\n",
         "\n",
         "if a >= 0:\n",
         "  raiz = math.sqrt(a)\n",
