--- a/Lista_1_Estudos_Idependentes_2.ipynb
+++ b/Lista_1_Estudos_Idependentes_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7dRZaWA9vEMztH+/Qk4Ge",
+      "authorship_tag": "ABX9TyO1+VVs5AG3aAiqzeexe4vu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5o1akSAw77AA",
-        "outputId": "5edce778-a0ab-4028-c247-a0e7ab684dd8"
+        "outputId": "5c53aab2-e211-439c-ea75-3de3ed4dbd82"
       },
       "outputs": [
         {
@@ -42,18 +42,26 @@
           "name": "stdout",
           "text": [
             "Digite o primeiro conjunto de frutas:\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): banana\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): pera\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): morango\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): uva\n",
             "Digite o nome de uma fruta (ou 'q' para sair): q\n",
             "\n",
-            "Esse é o conjunto 1 set()\n",
+            "Esse é o conjunto 1 {'banana', 'pera', 'morango', 'uva'}\n",
             "\n",
             "Digite o segundo conjunto de frutas:\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): limão\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): abacaxi\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): bergamota\n",
+            "Digite o nome de uma fruta (ou 'q' para sair): laranja\n",
             "Digite o nome de uma fruta (ou 'q' para sair): q\n",
             "\n",
-            "Esse é o conjunto 2 set()\n",
+            "Esse é o conjunto 2 {'bergamota', 'laranja', 'limão', 'abacaxi'}\n",
             "\n",
-            "União = set()\n",
+            "União = {'pera', 'morango', 'bergamota', 'uva', 'abacaxi', 'banana', 'laranja', 'limão'}\n",
             "\n",
-            "Diferença 1 = set()\n",
+            "Diferença 1 = {'banana', 'pera', 'morango', 'uva'}\n",
             "\n",
             "Intersecção = set()\n",
             "\n",
@@ -73,13 +81,13 @@
         "    frutas = set()\n",
         "    while True:\n",
         "        fruta = input(\"Digite o nome de uma fruta (ou 'q' para sair): \")\n",
-        "        if fruta == 'q':\n",
+        "        if fruta == 'q'.lower():\n",
         "            break\n",
         "        frutas.add(fruta)\n",
         "    return frutas\n",
         "\n",
         "# Ler os dois conjuntos de frutas\n",
-        "print(\"Digite o primeiro conjunto de frutas:\")\n",
+        "print(\"Digite o primeiro conjunto de frutas:\" )\n",
         "conjunto1 = ler_frutas()\n",
         "\n",
         "print()\n",
@@ -255,33 +263,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I-vnPK8WUcNG",
-        "outputId": "1540211d-922d-4842-abf1-584d22aff03e"
+        "outputId": "6a41e4d0-f5c5-46bc-d5af-95f7457b35d1"
       },
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o número de alunos: 2\n",
+            "Digite o número de alunos: 1\n",
             "Digite o nome do aluno 1: Gabriel\n",
-            "Digite a Nota 1 do aluno 1: 100\n",
-            "Digite a Nota 2 do aluno 1: 100\n",
-            "Digite o nome do aluno 2: Ana\n",
-            "Digite a Nota 1 do aluno 2: 60\n",
-            "Digite a Nota 2 do aluno 2: 40\n",
+            "Digite a Nota 1 do aluno 1: 70\n",
+            "Digite a Nota 2 do aluno 1: 70\n",
             "\n",
             "Informações dos Alunos:\n",
-            "Nome: Gabriel, Nota 1: 100.0, Nota 2: 100.0, Média: 100.0, Situação: Aprovado(a)\n",
-            "Nome: Ana, Nota 1: 60.0, Nota 2: 40.0, Média: 50.0, Situação: Reprovado(a)\n",
+            "Nome: Gabriel, Nota 1: 70.0, Nota 2: 70.0, Média: 70.0, Situação: Aprovado(a)\n",
             "\n",
             "Número de alunos aprovados: 1\n",
-            "Número de alunos reprovados: 1\n",
-            "Percentual de aprovação: 50.00%\n",
-            "Percentual de reprovação: 50.00%\n",
-            "Média de Nota 1 da turma: 80.00\n",
+            "Número de alunos reprovados: 0\n",
+            "Percentual de aprovação: 100.00%\n",
+            "Percentual de reprovação: 0.00%\n",
+            "Média de Nota 1 da turma: 70.00\n",
             "Média de Nota 2 da turma: 70.00\n",
-            "Média de Médias da turma: 75.00\n"
+            "Média de Médias da turma: 70.00\n"
           ]
         }
       ]
