--- a/Lista2_Pyton_arqivos.ipynb
+++ b/Lista2_Pyton_arqivos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlq3M17fzPv1sUDtImkU/4",
+      "authorship_tag": "ABX9TyOhQdWfjEUupNPfqbKw7Iga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,41 +49,94 @@
         "#○ O número de questões pode ser variável.\n",
         "#○ Deve permitir verificar os acertos de mais de um aluno.\n",
         "\n",
-        "def calcular_acertos(gabarito, respostas_aluno):\n",
-        "    acertos = 0\n",
-        "    for i in range(len(gabarito)):\n",
-        "        if gabarito[i] == respostas_aluno[i]:\n",
-        "            acertos += 1\n",
-        "    return acertos\n",
-        "\n",
-        "def main():\n",
-        "    gabarito = input(\"Informe o gabarito das questões (ex: A-B-C-A-B-C-E-D): \").upper().split(\"-\")\n",
-        "    num_questoes = len(gabarito)\n",
-        "\n",
-        "    while True:\n",
-        "        respostas_aluno = input(\"Informe as respostas do aluno (ou 'sair' para encerrar): \")\n",
-        "\n",
-        "        if respostas_aluno.lower() == \"sair\":\n",
-        "            break\n",
-        "\n",
-        "        respostas_aluno = respostas_aluno.upper().split(\"-\")\n",
-        "\n",
-        "        if len(respostas_aluno) != num_questoes:\n",
-        "            print(\"Número de respostas do aluno não coincide com o gabarito.\")\n",
-        "            continue\n",
-        "\n",
-        "        acertos = calcular_acertos(gabarito, respostas_aluno)\n",
-        "        print(\"O aluno acertou\", acertos, \" questões.\")\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()"
+        ""
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#exercicio 2\n",
+        "#Escreva um programa que faz o registro da venda de produtos. Para isso, é preciso:\n",
+        "#● Obter um arquivo com as informações dos produtos, contendo: Código, nome\n",
+        "#e valor. Defina o formato do arquivo.\n",
+        "#● Adicionar produtos na venda, onde o usuário informa o produto e a\n",
+        "#quantidade. A informação do produto pode ser pelo código.\n",
+        "#● O programa deve apresentar os itens da venda contendo as informações do\n",
+        "#item (código, nome e valor), quantidade e valor total do produto.\n",
+        "#● O programa deve apresentar o valor total da venda.\n",
+        "#● O programa deve gerar um arquivo de saída contendo os dados\n",
+        "#apresentados nos dois itens anteriores.\n",
         "\n",
+        "class RegistroVendas:\n",
+        "    def __init__(self, codigo, nome, valor):\n",
+        "        self.codigo = int(codigo)\n",
+        "        self.nome = str(nome)\n",
+        "        self.valor = float(valor)\n",
         "\n",
+        "produtosOferecidos = {\n",
+        "    1: RegistroVendas(1, \"Chocolate Premium\", 25.00),\n",
+        "    2: RegistroVendas(2, \"Refrigerante\", 7.50),\n",
+        "    3: RegistroVendas(3, \"Picanha\", 100.00),\n",
+        "    4: RegistroVendas(4, \"Arroz mascado 5kg\", 13.25)\n",
+        "}\n",
+        "\n",
+        "carrinho = []\n",
+        "\n",
+        "while True:\n",
+        "    print(\"\\n Dentre as seguintes Opções, Escolha abaixo: \")\n",
+        "    print(\"1. Adicionar produto ao carrinho\")\n",
+        "    print(\"2. Mostrar carrinho\")\n",
+        "    print(\"3. Mostrar valor total da venda\")\n",
+        "    print(\"4. Finalizar venda\")\n",
+        "    print(\"5. Sair\")\n",
+        "\n",
+        "    escolha = input(\"Escolha entre as opções de 1 a 5 acima: \")\n",
+        "\n",
+        "    if escolha == '1':\n",
+        "        codigoProduto = int(input(\"Informe o código do produto: \"))\n",
+        "\n",
+        "        if codigoProduto in produtosOferecidos:\n",
+        "            produto = produtosOferecidos[codigoProduto]\n",
+        "            quantidade = int(input(\"Informe a quantidade: \"))\n",
+        "            valorTotal = produto.valor * quantidade\n",
+        "            carrinho.append({\n",
+        "                \"produto\": produto,\n",
+        "                \"quantidade\": quantidade,\n",
+        "                \"valorTotal\": valorTotal\n",
+        "            })\n",
+        "            print(f\"{quantidade} {produto.nome}(s) Adicionados ao carrinho\")\n",
+        "        else:\n",
+        "            print(\"Código de produto inválido.\")\n",
+        "    elif escolha == '2':\n",
+        "        for item in carrinho:\n",
+        "            print(f\"Código: {item['produto'].codigo}\")\n",
+        "            print(f\"Nome: {item['produto'].nome}\")\n",
+        "            print(f\"Valor unitário: R${item['produto'].valor:.2f}\")\n",
+        "            print(f\"Quantidade: {item['quantidade']}\")\n",
+        "            print(f\"Valor total: R${item['valorTotal']:.2f}\")\n",
+        "            print(\"=\" * 20)\n",
+        "    elif escolha == '3':\n",
+        "        total = sum(item['valorTotal'] for item in carrinho)\n",
+        "        print(f\"Valor total da venda: R${total:.2f}\")\n",
+        "    elif escolha == '4':\n",
+        "        total = sum(item['valorTotal'] for item in carrinho)\n",
+        "        print(f\"Valor total da venda: R${total:.2f}\")\n",
+        "        nome_arquivo = input(\"Digite o nome do arquivo de saída: \")\n",
+        "        with open(nome_arquivo, 'w') as arquivo_saida:\n",
+        "            for item in carrinho:\n",
+        "                arquivo_saida.write(f\"Código: {item['produto'].codigo}\\n\")\n",
+        "                arquivo_saida.write(f\"Nome: {item['produto'].nome}\\n\")\n",
+        "                arquivo_saida.write(f\"Valor unitário: R${item['produto'].valor:.2f}\\n\")\n",
+        "                arquivo_saida.write(f\"Quantidade: {item['quantidade']}\\n\")\n",
+        "                arquivo_saida.write(f\"Valor total: R${item['valorTotal']:.2f}\\n\")\n",
+        "                arquivo_saida.write(\"=\" * 20 + \"\\n\")\n",
+        "        print(f\"Dados da venda foram salvos em {nome_arquivo}.\")\n",
+        "        carrinho = []  # Limpa o carrinho após a finalização da venda\n",
+        "    elif escolha == '5':\n",
+        "        print(\"Saindo do programa.\")\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"Opção inválida.\")\n",
         "\n",
         "\n",
         "\n",
@@ -91,10 +144,78 @@
         "\n"
       ],
       "metadata": {
-        "id": "n-IDbs-pHbSs"
+        "id": "n-IDbs-pHbSs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39bdd090-060e-4261-9e8e-b9e566685c8b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Dentre as seguintes Opções, Escolha abaixo: \n",
+            "1. Adicionar produto ao carrinho\n",
+            "2. Mostrar carrinho\n",
+            "3. Mostrar valor total da venda\n",
+            "4. Finalizar venda\n",
+            "5. Sair\n",
+            "Escolha entre as opções de 1 a 5 acima: 2\n",
+            "\n",
+            " Dentre as seguintes Opções, Escolha abaixo: \n",
+            "1. Adicionar produto ao carrinho\n",
+            "2. Mostrar carrinho\n",
+            "3. Mostrar valor total da venda\n",
+            "4. Finalizar venda\n",
+            "5. Sair\n",
+            "Escolha entre as opções de 1 a 5 acima: 3\n",
+            "Valor total da venda: R$0.00\n",
+            "\n",
+            " Dentre as seguintes Opções, Escolha abaixo: \n",
+            "1. Adicionar produto ao carrinho\n",
+            "2. Mostrar carrinho\n",
+            "3. Mostrar valor total da venda\n",
+            "4. Finalizar venda\n",
+            "5. Sair\n",
+            "Escolha entre as opções de 1 a 5 acima: 1\n",
+            "Informe o código do produto: 3\n",
+            "Informe a quantidade: 3\n",
+            "3 Picanha(s) Adicionados ao carrinho\n",
+            "\n",
+            " Dentre as seguintes Opções, Escolha abaixo: \n",
+            "1. Adicionar produto ao carrinho\n",
+            "2. Mostrar carrinho\n",
+            "3. Mostrar valor total da venda\n",
+            "4. Finalizar venda\n",
+            "5. Sair\n",
+            "Escolha entre as opções de 1 a 5 acima: 3\n",
+            "Valor total da venda: R$300.00\n",
+            "\n",
+            " Dentre as seguintes Opções, Escolha abaixo: \n",
+            "1. Adicionar produto ao carrinho\n",
+            "2. Mostrar carrinho\n",
+            "3. Mostrar valor total da venda\n",
+            "4. Finalizar venda\n",
+            "5. Sair\n",
+            "Escolha entre as opções de 1 a 5 acima: 4\n",
+            "Valor total da venda: R$300.00\n",
+            "Digite o nome do arquivo de saída: venda1_teste\n",
+            "Dados da venda foram salvos em venda1_teste.\n",
+            "\n",
+            " Dentre as seguintes Opções, Escolha abaixo: \n",
+            "1. Adicionar produto ao carrinho\n",
+            "2. Mostrar carrinho\n",
+            "3. Mostrar valor total da venda\n",
+            "4. Finalizar venda\n",
+            "5. Sair\n",
+            "Escolha entre as opções de 1 a 5 acima: 5\n",
+            "Saindo do programa.\n"
+          ]
+        }
+      ]
     }
   ]
 }
